--- a/src/ShopBridge/Services/Inventory/Inventory.API/appsettings.json
+++ b/src/ShopBridge/Services/Inventory/Inventory.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Initial Catalog=InventoryDB;Integrated Security=SSPI;"
+    "ServerDBConnection": "Server=mssql-58823-0.cloudclusters.net,18830;Initial Catalog=InventoryDB;User ID=SRICHARAN;Password=Password-1;",
+    "LocalDBConnection": "Server=.;Initial Catalog=InventoryDB;Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
